@@ -319,6 +319,7 @@ img,
 	&.alignleft,
 	&.pull-left {
 		margin: 0 20px 15px 0;
+		padding: 0 !important;
 	}
 
 	&.aligncenter {
