@@ -642,7 +642,7 @@
 
 		.comment {
 			& > img {
-				margin-right: 5px;
+				margin-right: 15px;
 			}
 
 			.media-body {
